Closed Bug 1406233 Opened 7 years ago Closed 7 years ago

Fix #include directives for device number macros in bug 1401666

Categories

(Core :: Security: Process Sandboxing, defect, P1)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox57 --- fixed
firefox58 --- fixed

People

(Reporter: jld, Assigned: jld)

References

Details

Attachments

(1 file)

See bug 1401666 comment #31 through 35, and see also bug 1329798 which is the same problem in a different part of the code: we need to #include <sys/sysmacros.h> to get the macros that split device numbers into major/minor.  Apparently this used to be pulled in by <sys/types.h> but newer glibcs no longer do that, so the build is currently broken on those systems.
Assignee: nobody → jld
Priority: -- → P1
Comment on attachment 8915787 [details]
Bug 1406233 - Include sys/sysmacros.h for major()/minor() macros in Linux sandbox broker.

https://reviewboard.mozilla.org/r/187008/#review192352
Attachment #8915787 - Flags: review?(gpascutto) → review+
Pushed by jedavis@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9fc84ba52f31
Include sys/sysmacros.h for major()/minor() macros in Linux sandbox broker. r=gcp
https://hg.mozilla.org/mozilla-central/rev/9fc84ba52f31
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Comment on attachment 8915787 [details]
Bug 1406233 - Include sys/sysmacros.h for major()/minor() macros in Linux sandbox broker.

This is needed for uplifting the fix for bug 1401666 to 57.
Attachment #8915787 - Flags: approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: