Bug 1406233 - Include sys/sysmacros.h for major()/minor() macros in Linux sandbox broker. r=gcp, a=ritu

MozReview-Commit-ID: G1D4yxLAAqg