security/sandbox/linux/broker/SandboxBrokerPolicyFactory.cpp
@@ -32,8 +32,9 @@
 #endif
 
 #include <dirent.h>
-#include <sys/types.h>
 #include <sys/stat.h>
+#include <sys/sysmacros.h>
+#include <sys/types.h>
 
 namespace mozilla {
 
